# django_lessons

./: db.sqlite3  pyproject.toml
quickstart/: admin.py  models.py  serializers.py  views.py
quickstart/migrations/: 0001_initial.py
tutorial/: comands.txt  settings.py
